@@ -23,6 +23,7 @@
  - added option to show day names (goffy)
  - added option for progress bars (goffy)
  - updated image editor to bootstrap 4 (goffy)
+ - fixed bug in export events (goffy)
 
 ==============================================================
 1.0.4 RC1 [2022/08/29]
